--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,8 @@
                 <category android:name="com.example.ok.shipments"/>
             </intent-filter>
         </service>
-
+        <meta-data android:value="58b4dfea766613616b0029d0" android:name="UMENG_APPKEY"/>
+        <meta-data android:value="Channel ID" android:name="UMENG_CHANNEL"/>
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true">
